# nixb

./: .clang-format  .clangd  .clangd-uhh  .envrc  .gitignore  .prettierrc.json  .repomixignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Makefile  NOTES.md  api-notes1.md  clangd.sh  convert_to_subtree.sh  docker.nix  flake.nix  mdspan.wrap  meson.build  plan-ansipbar-2.md  plan-ansipbar.md  test.sh  treefmt.toml  vcpkg.json
.agent/rules/: nix-develop.md
.github/workflows/: ci.yml
.zed/: settings.json
archive/src/: Ansi.hpp  NixBuildState.cpp  NixLogParser.cpp  NixLogPlayer.hpp  NixLogRecorder.cpp  NixLogWatcher.cpp  NixLogWatcher.hpp  Ui.cpp  Ui.hpp  UiRender.hpp  UiStateBuilder.cpp  UiTypes.hpp  main.cpp
doc/manual/: generate-manpage.nix  meson.build  package.nix
docs/: Doxyfile.nix-api  agent-integration.md  agent-yielding.md  async-p2300-report.md  execution.bs  kitty-keyboard-protocol-notes.md  llm-agent-client-reference.md
maintainers/: flake-module.nix  upload-debug-info-to-sentry.py
nix-src/: docker.nix
nix-src/maintainers/: flake-module.nix
nix-src/nix-meson-build-support/common/cxa-throw/: is-logic-error.hh  meson.build
nix-src/packaging/: components.nix  dependencies.nix  dev-shell.nix  everything.nix  hydra.nix  sentry-native.nix
nxt/: README.md  meson.build
nxt/src/nxt/: ansi.cpp  ansi.hpp  compositor.cpp  compositor.hpp  glyph-table.cpp  glyph-table.hpp  http-coro.hpp  http.hpp  input_hud_example.cpp  nxt.hpp  raster-diff.hpp  raster.cpp  raster.hpp  tui.hpp  tui_example.cpp  units.hpp
nxt/src/nxtio/: app.cpp  app.hpp  async.hpp  buffers.hpp  buffers.zig  http.cpp  http.hpp  input.cpp  input.hpp  llm.hpp  net.cpp  net.hpp  nxthttp.cpp  nxtllm-hud.cpp  nxtllm.cpp  scope.hpp  signal-pipe.cpp  signal-pipe.hpp
nxt/subprojects/mdspan/: README.md
nxt/test/: buffers-test.cpp  http-coro-test.cpp  http-io-test.cpp  http-test.cpp  input-test.cpp  llm-test.cpp  net-include-test.cpp  raster-test.cpp  terminal-test.cpp  vterm-wrapper.hpp
packaging/: components.nix  dev-shell.nix
src/: Ansi.cpp  Ansi.hpp  DependencyGraph.hpp  IdColor.hpp  NixBuildState.cpp  NixBuildState.hpp  NixLogForwardingLogger.cpp  NixLogForwardingLogger.hpp  NixLogParser.cpp  NixLogParser.hpp  NixLogPlayer.cpp  NixLogRecorder.hpp  NixLogWatcher.cpp  NixLogWatcher.hpp  TerminalUi.cpp  TerminalUi.hpp  Ui.cpp  Ui.hpp  UiRender.cpp  UiRender.hpp  UiStateBuilder.cpp  UiStateBuilder.hpp  UiTypes.hpp  ansi.hpp  build-sim.hpp  cgroups.cpp  drv-graph.hpp  glyph-table.cpp  glyph-table.hpp  log-replay.cpp  log-replay.hpp  main-other-commands.cpp.txt  main.cpp  nix-api.hpp  nix-log-adapter.cpp  nix-log-adapter.hpp  nix-log-to-md.cpp  nix_log_parser.cpp  nix_log_parser.hpp  nixbco.cpp  (+14 more)
src/libcmd/: call-flake-schemas.nix  common-eval-args.cc  installable-flake.cc  installables.cc  package.nix  repl.cc
src/libexpr/: eval-cache.cc  eval-settings.cc  eval.cc  nixexpr.cc  package.nix  parallel-eval.cc  paths.cc  primops.cc  symbol-table.cc  value-to-json.cc
src/libexpr-c/: nix_api_expr.cc  nix_api_value.cc  nix_api_value.h
src/libfetchers/: cache.cc  fetch-to-store.cc  git.cc  github.cc  mercurial.cc  meson.build  path.cc  provenance.cc  registry.cc  tarball.cc
src/libfetchers-tests/: git-utils.cc
src/libflake/: flake-primops.cc  lockfile.cc
src/libflake-tests/: flakeref.cc
src/libmain/: progress-bar.cc  shared.cc
src/libstore/: async-path-writer.cc  build-result.cc  common-protocol.cc  daemon.cc  derivations.cc  dummy-store.cc  filetransfer.cc  gc.cc  globals.cc  local-fs-store.cc  nar-info-disk-cache.cc  nar-info.cc  package.nix  path-info.cc  remote-store.cc  restricted-store.cc  ssh-store.cc  store-api.cc  worker-protocol.cc
src/libstore-c/: nix_api_store.cc  nix_api_store.h
src/libutil/: args.cc  error.cc  experimental-features.cc  logging.cc  mounted-source-accessor.cc  source-accessor.cc  tarfile.cc  url.cc
src/libutil-tests/: config.cc  cxa-throw.cc  meson.build  nix_api_util.cc
src/new/: ActivityLifecycle.hpp  CoroPrototype.hpp  README.md  VISION.md  ansi.cpp  ansi.hpp  glyph-table.cpp  glyph-table.hpp  main_coro.cpp  meson.build  nix-log-adapter.cpp  nix-log-adapter.hpp  nixbco.cpp  setup.sh  terminal-layout.hpp  test_lifecycle.cpp  thoughts1.md  tty-raster-diff.cpp  tty-raster.cpp  tty-raster.hpp  ui-app.cpp  ui-app.hpp  ui-dom.cpp  ui-dom.hpp  ui-example.cpp  ui-layout.cpp  ui-layout.hpp  ui-paint.cpp  ui-paint.hpp  ui-widgets.cpp  ui-widgets.hpp  vterm-wrapper.hpp
src/new/test/: README.md  doctest.h  mini-raster-demo.cpp  nxb-term-tests.el  nxb-ttytest  nxbtest-001.cpp  tests.yaml  vterm-doctest-main.cpp  vterm-ut-main.cpp
src/new/test/cases/: vterm-doctest-suite.hpp  vterm-ut-suite.hpp
src/nix/: app.cc  bundle.cc  eval.cc  flake-prefetch-inputs.cc  flake.cc  ls.cc  main.cc  meson.build  meson.options  nario-list.md  nario.cc  prefetch.cc  provenance-show.md  provenance-verify.md  repl.cc  search.cc  upgrade-nix.cc
src/nix/nix-build/: nix-build.cc
src/nix/nix-env/: nix-env.cc  user-env.cc
src/nix/nix-store/: nix-store.cc
src/nxt/: ansi.cpp  ansi.hpp  app.cpp  app.hpp  async.hpp  compositor.cpp  compositor.hpp  glyph-table.cpp  glyph-table.hpp  nxt.hpp  raster-diff.hpp  raster.cpp  raster.hpp  scope.hpp  signal-pipe.cpp  signal-pipe.hpp  stdexec_example.cpp  tui.hpp  tui_example.cpp  units.hpp
src/old/: DependencyGraph.hpp  IdColor.hpp  NixBuildState.cpp  NixBuildState.hpp  NixLogForwardingLogger.hpp  NixLogParser.cpp  Ui.cpp  UiStateBuilder.cpp  UiStateBuilder.hpp
subprojects/: libcoro.wrap  mdspan.wrap  simdjson.wrap
subprojects/libcoro/: CMakeLists.txt  meson.build
subprojects/libcoro/include/coro/: export.hpp
subprojects/libvterm/: CMakeLists.txt  meson.build
subprojects/mdspan/: CMakeLists.txt  meson.build
subprojects/mdspan/tests/: test_layout_ctors.cpp  test_layout_stride.cpp
test/: duckdb-test.cpp
testdata/: filnix-python.tnixbuild  filnix-python.tnixbuildv  filpy.tnixbuild  hello-success.tnixlog  hello.tnixlog  hello2.json  show-emacs.tnixlog
tests/: repl-completion.nix
traces/: buffers-xhigh-100k.parquet
(+308 files in other folders)
