# vim: filetype=meson

# A relative path means it gets appended to prefix.
option(
  'profile-dir',
  type : 'string',
  value : 'etc/profile.d',
  description : 'the path to install shell profile files',
)

option(
  'sentry',
  type : 'feature',
  value : 'auto',
  description : 'Enable Sentry crash reporting',
)

option(
  'crashpad-handler',
  type : 'string',
  value : '',
  description : 'Path to the crashpad_handler binary (required when sentry is enabled)',
)
